--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,10 +2,10 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
-  
+
   <title><%= titulo || 'SysTools' %></title>
   <meta name="description" content="<%= descripcion || 'Herramientas online para técnicos de redes y sistemas' %>">
-  
+
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
   <!-- 🎨 Estilos globales -->
@@ -14,7 +14,7 @@
   <link rel="stylesheet" href="/css/global/layout.css">
   <link rel="stylesheet" href="/css/global/components.css">
 
-  <!-- 🧩 Estilos por sección -->
+  <!-- 🧩 Estilos por zona -->
   <% if (zona === 'public') { %>
     <link rel="stylesheet" href="/css/sections/public/index.css">
   <% } else if (zona === 'private') { %>
@@ -22,4 +22,12 @@
   <% } else if (zona === 'admin') { %>
     <link rel="stylesheet" href="/css/sections/admin/panel.css">
   <% } %>
+
+  <!-- 🔄 Estilo específico de vista -->
+  <% if (typeof estilosExtra !== 'undefined' && estilosExtra.length) { %>
+    <% estilosExtra.forEach(estilo => { %>
+      <link rel="stylesheet" href="<%= estilo %>">
+    <% }) %>
+  <% } %>
+  
 </head>
