--- a/public/css/global/components.css
+++ b/public/css/global/components.css
@@ -12,7 +12,7 @@
   }
   
   .contenedor-header {
-    max-width: 1200px;
+    max-width: 90%;
     margin: 0 auto;
     display: flex;
     align-items: center;
@@ -27,6 +27,24 @@
     text-decoration: none;
     color: inherit;
   }
+  .footer-principal {
+    background-color: var(--bg-header, #f4f4f4);
+    color: var(--color-header, #111);
+    box-shadow: 0 5px 5px rgba(0,0,0,0.1);
+    position: fixed;
+    bottom: 0;
+    width: 100%;
+    z-index: 1000;
+  }
+  .footer-contenedor{
+    max-width: 90%;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    gap: 1rem;
+    flex-wrap: wrap;
+  }
   
   /* =============================
      🔗 NAVEGACIÓN PRINCIPAL
@@ -35,7 +53,7 @@
     display: flex;
     gap: 1rem;
     flex: 1;
-    justify-content: center;
+    justify-content: space-around;
     flex-wrap: wrap;
   }
   
