--- a/views/partials/head.ejs
+++ b/views/partials/head.ejs
@@ -2,9 +2,13 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="csrf-token" content="<%= csrfToken %>">
 
   <title><%= titulo || 'SysTools' %></title>
   <meta name="description" content="<%= descripcion || 'Herramientas online para técnicos de redes y sistemas' %>">
+
+  <!-- Font Awesome -->
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
 
   <link rel="icon" href="/favicon.ico" type="image/x-icon">
 
@@ -14,16 +18,24 @@
   <link rel="stylesheet" href="/css/global/layout.css">
   <link rel="stylesheet" href="/css/global/components.css">
 
-  <!-- 🧩 Estilos por zona -->
+  <!-- 🗺 Leaflet para mapas -->
+  <link rel="stylesheet" href="https://unpkg.com/leaflet@1.9.4/dist/leaflet.css"
+      integrity="sha256-p4NxAoJBhIIN+hmNHrzRCf9tD/miZyoHS5obTRR9BMY="
+      crossorigin=""/>
+
+  <!-- 🧩 Estilos por zona y página específica -->
   <% if (zona === 'public') { %>
-    <link rel="stylesheet" href="/css/sections/public/index.css">
+    <link rel="stylesheet" href="/css/sections/public/inicio.css">
+    <% if (typeof vista !== 'undefined') { %>
+      <link rel="stylesheet" href="/css/sections/public/<%= vista %>.css">
+    <% } %>
   <% } else if (zona === 'private') { %>
     <link rel="stylesheet" href="/css/sections/private/dashboard.css">
   <% } else if (zona === 'admin') { %>
     <link rel="stylesheet" href="/css/sections/admin/panel.css">
   <% } %>
 
-  <!-- 🔄 Estilo específico de vista -->
+  <!-- 🔄 Estilos adicionales -->
   <% if (typeof estilosExtra !== 'undefined' && estilosExtra.length) { %>
     <% estilosExtra.forEach(estilo => { %>
       <link rel="stylesheet" href="<%= estilo %>">
